SVN
---

	+ Added some missing $(DESTDIR) in Makefiles.
	+ New package info field "Bug report".

	Changes in porg:

	+ Make option -U require -r.
	+ Check for option requirements.
	+ Added short option -j for --log-missing.


Version 0.6 (16 June 2014)
--------------------------

	Changes in porg:

	+ Bugfix: porg erroniously complained about command line option
	  incompatibility when some options were doubled (like in '-rr').
	+ Improved the man page and usage output of porg, organizing options by
	  groups. Added a new section 'FILE NAMES WITH SPACES' to the man page. 
	  Reading it is recommended.
	+ Removed path /etc/mtab from the default EXCLUDE.
	+ Search package info in configure.log if config.log is not found.
	+ Ask the user when unlogging a package (option -U), unless option -b
	  is enabled.

	Changes in grop:

	+ New icon.

	Changes in scripts:

	+ New command line options --no-porg-suffix and --logdir for porgball.
	+ Let porgball extract files from ordinary tarballs (without suffix
	  '.porg' in their names).
	+ Honour DESTDIR when installing porg_bash_completion (thanks Veeti
	  Paananen).


Version 0.5 (11 June 2014)
--------------------------

	Changes in porg:

	+ Improved checking of command line options compatibility.
	+ Added paths {/run,/mnt,/media,/cdrom,/etc/mtab} to the default EXCLUDE.

	Changes in grop:

	+ Accept command line options (run 'grop -h' for more info).
	+ Added a "Cancel" button to the porgball creation dialog. Fixed some minor
	  bugs.
	+ Save settings in ~/.config/grop/groprc instead of ~/.grop

	Changes in scripts:

	+ Bugfix: Porgball failed when trying to log extractions with porg.
	+ Bugfix (#1): Paco2porg lost package information (thanks Leandro Nini).


Version 0.4 (26 May 2014)
-------------------------

	+ Bugfix: In some cases, tmp files were not removed after installing a 
	  package.
	+ Bugfix: Some files were not registered when logging the own porg
	  installation with "make logme".