@@ -36,10 +36,9 @@ class MainTreeView : public Gtk::TreeView
 			add(m_pkg);
 		}
 
-		//XXX add a column for the icon
 		Gtk::TreeModelColumn<Pkg*>			m_pkg;
 		Gtk::TreeModelColumn<Glib::ustring>	m_name;
-		Gtk::TreeModelColumn<gulong>		m_size;
+		Gtk::TreeModelColumn<float>			m_size;
 		Gtk::TreeModelColumn<int>			m_date;
 		Gtk::TreeModelColumn<gulong>		m_nfiles;
 		Gtk::TreeModelColumn<Glib::ustring>	m_summary;
