@@ -40,6 +40,7 @@ class Porgball : public Gtk::Dialog
 		int			prog;
 		int			level;
 		bool		test;
+		bool		porg_suffix;
 	} Last;
 		
 	enum { PROG_GZIP, PROG_BZIP2, PROG_XZ };
@@ -53,9 +54,10 @@ class Porgball : public Gtk::Dialog
 	Gtk::ComboBoxText		m_combo_level;
 	Gtk::FileChooserButton	m_filechooser_button;
 	Gtk::CheckButton		m_button_test;
-	Gtk::Button*			mp_button_close;
-	Gtk::Button*			mp_button_cancel;
-	Gtk::Button*			mp_button_ok;
+	Gtk::CheckButton		m_button_porg_suffix;
+	Gtk::Button*			m_button_close;
+	Gtk::Button*			m_button_cancel;
+	Gtk::Button*			m_button_ok;
 	Gtk::ProgressBar		m_progressbar;
 	std::string				m_tmpfile;
 	Glib::Pid				m_pid;
@@ -64,7 +66,7 @@ class Porgball : public Gtk::Dialog
 
 	void set_children_sensitive(bool = true);
 	void on_cancel();
-	void on_change_prog();
+	void set_tarball_suffix();
 	bool create_porgball();
 	bool spawn(std::vector<std::string>&);
 	void end_create(bool done = true);
