@@ -46,6 +46,7 @@ namespace Porg
 	};
 
 	extern std::string fmt_size(ulong size);
+	extern std::string fmt_size(float size);
 	extern std::string fmt_date(time_t date, bool print_hour);
 	extern std::string strip_trailing(std::string const&, char);
 	extern bool in_paths(std::string const&, std::string const&);
